[package]
name = "blueshift_secp256r1_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-secp256r1-instruction = "0.1.1"
pinocchio-system = "0.2.3"


[lib]
crate-type = ["lib", "cdylib"]


[dev-dependencies]
solana-sdk = "2.2.1"
# mollusk-svm = "0.2.1"
solana-program-runtime = ">=2.2,<=2.2.4"
solana-feature-set = "^2.2.1"
litesvm = "0.6.1"
serde_json = "1.0.140"



[features]
no-bpf-entrypoint = []
std = []
test = ["no-bpf-entrypoint", "std"]
